Revision history for Perl module Net::Amazon::S3:

0.92 ???
	- misc cleanups, more tests
	- Net::Amazon::S3::Client now can be constructed with same arguments as Net::Amazon::S3
	- Support explicit ACL in bucket/object/upload creation

0.91 2020-08-19 23:25 +0
	- fix regressions introduced by 0.90
	  - undeclared dependency
	  - broken usage of hashref argument in N:A:S3 construction

0.90 2020-08-18 16:00 +0
    - Support intelligent_tiering, glacier, and deep_archive storage classes
	  (thanks Sherwin Daganato)
	- Object availability predicate (thanks Emanuele Tomasi)
	- fix default region handling (#77, #78, #80)
    - new authentication context architecture
	  See Net::Amazon::S3::Authorization::IAM for future incompatiblity warning

0.89 Tue 11 Feb 2020 20:26:26
    - fix signature v4 test (Ali Zia)

0.88 Sat  1 Feb 2020 21:29:52
    - Allow passing headers from client to InitiateMultipartUpload request (Ali Zia)
    - sign uri with iam role (kuriyama)
    - Canned ACLs updated (ratsbane)

0.87 Mon  9 Dec 2019 19:53:42 GMT
    - Time::Piece fix from Eden Crane
    - eu-north-1 region (happy-barney)
    - drop hardcoded V2 in ListAllMyBuckets (happy-barney)
    - Fix setting of S3 XML document namespace (michal-josef-spacek)

0.86 Fri 12 Apr 2019 13:38:10 BST
    - Retry bucket HEAD few times see #51 (thanks Branislav Zahradník)
    - Support server side encryption also in Net::Amazon::S3::Bucket (thanks Branislav Zahradník)
    - Use session token if specified in Signature V4 as well #43 (thanks Branislav Zahradník)
    - Add website_redirect_location (thanks Gavin Carr)
    - Make keep_alive cache size configurable (thanks Michael Schout)
    - Pod::Weaver fixes (thanks Florian Schlichting)

0.85 Tue 28 Aug 2018 20:14:38 BST
     - Support standard_ia and onezone_ia storage classes (thanks Michele Beltrame)
     - run 'use_ok' on all modules (thanks Yanick Champoux)
     - spellings (thanks Gregor Herrmann)