@@ -4,6 +4,7 @@ Revision history for Perl module Net::Amazon::S3:
 	- misc cleanups, more tests
 	- Net::Amazon::S3::Client now can be constructed with same arguments as Net::Amazon::S3
 	- Support explicit ACL in bucket/object/upload creation
+	- Support set_acl on Client::Bucket / Client::Object (issue #83)
 
 0.91 2020-08-19 23:25 +0
 	- fix regressions introduced by 0.90
